<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>CrossRoads Parent</name>
	<description>A small, lightweight Java library for i18n (Internationalization) / L10n (localization) of text messages.</description>
	<url>https://github.com/tfredrich/crossroads</url>
	<groupId>com.strategicgains</groupId>
	<artifactId>CrossRoads-Parent</artifactId>
	<version>1.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>

	<modules>
		<module>core</module>
		<module>restexpress</module>
	</modules>

	<dependencies>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<type>jar</type>
			<scope>test</scope>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<doclint>none</doclint>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.6</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
		</plugins>
	</build>

	<issueManagement>
		<system>GitHub.com</system>
		<url>https://github.com/tfredrich/crossroads/issues</url>
	</issueManagement>

	<scm>
		<url>git@github.com:tfredrich/crossroads.git</url>
		<connection>scm:git:git@github.com:tfredrich/crossroads.git</connection>
		<developerConnection>scm:git:git@github.com:tfredrich/crossroads.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>

	<developers>
		<developer>
			<id>tfredrich</id>
			<name>Todd Fredrich</name>
			<email>tfredrich@gmail.com</email>
		</developer>
	</developers>
</project>
